Fix CSS bug: unwanted scrollbars when zooming book list

--- a/hlc/ui/static/theme.css
+++ b/hlc/ui/static/theme.css
@@ -106,6 +106,7 @@ ul.items li {
 /* BOOK PREVIEW */
 .book_preview {
     margin-bottom:1em;
+    overflow:hidden;
 }
 .book_preview > div {
 }
